# nix-cpp-playground

./: .clangd  .gitignore  Greeter.cpp  README.md  compile_flags.txt  flake.nix  justfile  main.cpp  meson.build  wip_patch.patch
include/: Greeter.hpp
src/: main.cpp
